# Pasapalabra

./: .gitignore  .gitmodules  CMakeLists.txt  Pasapalabra.sln
Pasapalabra/: Pasapalabra.vcxproj  Pasapalabra.vcxproj.filters
Pasapalabra/src/donut_game/: ball.cpp  ball.h  donut.cpp  donut.h  donut_question.h
Pasapalabra/src/utils/: globals.h  split.cpp  split.h  trim.cpp  trim.h
Pasapalabra/src/web_service/: web_service.cpp  web_service.h
donutgame/: donutgame.vcxproj  donutgame.vcxproj.filters
donutgame/src/donut_game/: ball.h  donut.cpp  donut_question.h
donutgame/src/web_service/: web_service.cpp
src/: CMakeLists.txt
src/donut_game/: CMakeLists.txt  donut.h
src/tests/: CMakeLists.txt  tests.cpp
src/utils/: CMakeLists.txt  split.cpp  trim.cpp
src/web_service/: CMakeLists.txt  web_service.h
tests/: tests.vcxproj
tests/src/: tests.cpp
